--- a/outputs.html
+++ b/outputs.html
@@ -39,42 +39,42 @@
                     <div class="service-box">
                         <i class="fa fa-file-text"></i>
                         <h3>Angelo <span>Ormilla</span></h3>
-                        <a href="#" download="Mail-Merge.pdf"><i class="fa fa-arrow-down"></i></a>
+                        <a href="#" download="Ormilla.zip"><i class="fa fa-arrow-down"></i></a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="service-box">
                         <i class="fa fa-file-text"></i>
                         <h3>Camille <span>Ayapana</span></h3>
-                        <a href="#" download="Mail-Merge.pdf"><i class="fa fa-arrow-down"></i></a>
+                        <a href="Camille" download="Ayapana.zip"><i class="fa fa-arrow-down"></i></a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="service-box">
                         <i class="fa fa-file-text"></i>
                         <h3>Charmaine <span>Axalan</span></h3>
-                        <a href="#" download="Mail-Merge.pdf"><i class="fa fa-arrow-down"></i></a>
+                        <a href="Charmaine" download="Axalan.zip"><i class="fa fa-arrow-down"></i></a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="service-box">
                         <i class="fa fa-file-text"></i>
                         <h3>Kathleen <span>Factor</span></h3>
-                        <a href="#" download="Mail-Merge.pdf"><i class="fa fa-arrow-down"></i></a>
+                        <a href="Kathleen" download="Factor.zip"><i class="fa fa-arrow-down"></i></a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="service-box">
                         <i class="fa fa-file-text"></i>
                         <h3>Rhianne <span>Ramos</span></h3>
-                        <a href="#" download="Mail-Merge.pdf"><i class="fa fa-arrow-down"></i></a>
+                        <a href="Rhianne" download="Ramos.zip"><i class="fa fa-arrow-down"></i></a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="service-box">
                         <i class="fa fa-file-text"></i>
                         <h3>Sean <span>Paradero</span></h3>
-                        <a href="#" download="Mail-Merge.pdf"><i class="fa fa-arrow-down"></i></a>
+                        <a href="Sean" download="Paradero.zip"><i class="fa fa-arrow-down"></i></a>
                     </div>
                 </div>
             </div>
