--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
     <div class="hero">
         <div class="navbar">
             <img src="logo.png" class="logo">
-            <button type="button"><a href="members.html">Members</a></button>
+            <ul>
+                <li><a href="members.html">Members</a></li>
+            </ul>
         </div>
         <div class="content">
             <small>Welcome to Group 3's</small>
             <h1>EmTech<br>Group Website</h1>
-                <button type="button"><a href="outputs.html">Group outputs</a></button>
+            <button type="button"><a href="outputs.html"><span></span>Group Outputs</a></button>
 
         </div>
         <div class="side-bar">
