--- a/outputs.html
+++ b/outputs.html
@@ -29,56 +29,71 @@
                 <li><a href="index.html" class="Home">Home</a></li>
             </ul>
         </div>
+
         <div class="container">
             <div class="services">
-                <h1 class="dark-blue medium-blue light-blue glowing">Group Outputs</h1>
-                <p>Mail Merge Files</p>
+                <h1 class="dark-blue medium-blue light-blue glowing">Outputs</h1>
             </div>
             <div class="row">
                 <div class="col-md-4">
                     <div class="service-box">
                         <i class="fa fa-file-text"></i>
                         <h3>Angelo <span>Ormilla</span></h3>
-                        <a href="#" download="Ormilla.zip"><i class="fa fa-arrow-down"></i></a>
+                        <a href="Angelo.zip" download="Ormilla.zip"><i class="fa fa-arrow-down"></i></a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="service-box">
                         <i class="fa fa-file-text"></i>
                         <h3>Camille <span>Ayapana</span></h3>
-                        <a href="Camille" download="Ayapana.zip"><i class="fa fa-arrow-down"></i></a>
+                        <a href="Camille.zip" download="Ayapana.zip"><i class="fa fa-arrow-down"></i></a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="service-box">
                         <i class="fa fa-file-text"></i>
                         <h3>Charmaine <span>Axalan</span></h3>
-                        <a href="Charmaine" download="Axalan.zip"><i class="fa fa-arrow-down"></i></a>
+                        <a href="Charmaine.zip" download="Axalan.zip"><i class="fa fa-arrow-down"></i></a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="service-box">
                         <i class="fa fa-file-text"></i>
                         <h3>Kathleen <span>Factor</span></h3>
-                        <a href="Kathleen" download="Factor.zip"><i class="fa fa-arrow-down"></i></a>
+                        <a href="Kathleen.zip" download="Factor.zip"><i class="fa fa-arrow-down"></i></a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="service-box">
                         <i class="fa fa-file-text"></i>
                         <h3>Rhianne <span>Ramos</span></h3>
-                        <a href="Rhianne" download="Ramos.zip"><i class="fa fa-arrow-down"></i></a>
+                        <a href="Rhianne.zip" download="Ramos.zip"><i class="fa fa-arrow-down"></i></a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="service-box">
                         <i class="fa fa-file-text"></i>
                         <h3>Sean <span>Paradero</span></h3>
-                        <a href="Sean" download="Paradero.zip"><i class="fa fa-arrow-down"></i></a>
+                        <a href="Sean.zip" download="Paradero.zip"><i class="fa fa-arrow-down"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="service-box">
+                        <i class="fa fa-file-text"></i>
+                        <h3>Groupings <span>Outputs</span></h3>
+                        <a href="Group.zip" download="Groupings.zip"><i class="fa fa-arrow-down"></i></a>
                     </div>
                 </div>
             </div>
         </div>
+
+        <div class="contain">
+            <div class="gallery">
+                <div class="img-box"><h3><span>Meme</span></h3></div>
+                <div class="img-box"><h3><span>Advocacy Poster</span></h3></div>
+            </div>
+        </div>
+
     </div>
 
     <script>
