--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
         </div>
         <div class="content">
             <small>Welcome to Group 3's</small>
-            <h1>EmTech<br>Group Website</h1>
+            <h1><strong class="em-tech">EmTech</strong><br>Group Website</h1>
             <button type="button"><a href="outputs.html"><span></span>Group Outputs</a></button>
 
         </div>
         <div class="side-bar">
             <img src="menu.png" class="menu">
             <div class="social-links">
-                <img src="fb.png">
+                <a href="https://www.facebook.com/profile.php?id=61553427764752">
+                    <img src="fb.png" alt="facebook">
+                </a>
             </div>
             <div class="useful-links">
                 <img src="info.png">
